--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "license": "UNLICENSED",
+  "browserslist": [
+    ">0.3%",
+    "not ie 11",
+    "not dead",
+    "not op_mini all"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,7 +35,10 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
     "eslint": "7.28.0",
-    "eslint-config-next": "11.0.0"
+    "eslint-config-next": "11.0.0",
+    "typescript": "^4.3.4"
   }
 }
