--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@manaflair/redux-batch": "^1.0.0",
-    "@reduxjs/toolkit": "^1.6.0",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
-    "bootstrap-icons": "^1.5.0",
-    "classnames": "^2.3.1",
-    "js-cookie": "^2.2.1",
+    "@reduxjs/toolkit": "1.6.0",
+    "axios": "0.21.1",
+    "bootstrap": "5.0.1",
+    "bootstrap-icons": "1.5.0",
+    "classnames": "2.3.1",
+    "js-cookie": "2.2.1",
     "next": "11.0.0",
-    "next-cookies": "^2.0.3",
-    "next-redux-wrapper": "^7.0.2",
+    "next-cookies": "2.0.3",
+    "next-redux-wrapper": "7.0.2",
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-beta.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.4",
-    "redux-logger": "^3.0.6",
-    "sass": "^1.35.1"
+    "react-redux": "7.2.4",
+    "redux-logger": "3.0.6"
   },
   "devDependencies": {
-    "@types/node": "^15.12.4",
-    "@types/react": "^17.0.11",
+    "@types/js-cookie": "^2.2.6",
+    "@types/node": "15.12.4",
+    "@types/react": "17.0.11",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
-    "typescript": "^4.3.4"
+    "sass": "1.35.1",
+    "typescript": "4.3.4"
   }
 }
