--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "next-redux-bootstrap",
-  "description": "Boilerplate project using react.js, next.js, redux.js and bootstrap",
+  "name": "next.js-example-project",
+  "description": "Next.js example project",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
-  "browserslist": [
-    ">0.3%",
-    "not ie 11",
-    "not dead",
-    "not op_mini all"
-  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "yarn cache clean && next telemetry disable && next dev",
+    "build": "yarn cache clean && next telemetry disable && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -23,6 +17,7 @@
     "bootstrap-icons": "1.5.0",
     "classnames": "2.3.1",
     "js-cookie": "2.2.1",
+    "moment": "^2.29.1",
     "next": "11.0.0",
     "next-cookies": "2.0.3",
     "next-i18next": "^8.5.1",
@@ -37,6 +32,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "15.12.4",
     "@types/react": "17.0.11",
+    "@types/react-redux": "^7.1.16",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
     "sass": "1.35.1",
