Added route localization changes

--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.6.0",
-    "axios": "0.21.1",
     "bootstrap": "5.0.1",
     "bootstrap-icons": "1.5.0",
     "classnames": "2.3.1",
     "js-cookie": "2.2.1",
-    "moment": "^2.29.1",
+    "moment": "2.29.1",
     "next": "11.0.0",
     "next-cookies": "2.0.3",
-    "next-i18next": "^8.5.1",
+    "next-i18next": "8.5.1",
     "next-redux-wrapper": "7.0.2",
     "react": "17.0.2",
     "react-bootstrap": "2.0.0-beta.2",
@@ -29,10 +28,10 @@
     "redux-logger": "3.0.6"
   },
   "devDependencies": {
-    "@types/js-cookie": "^2.2.6",
+    "@types/js-cookie": "2.2.6",
     "@types/node": "15.12.4",
     "@types/react": "17.0.11",
-    "@types/react-redux": "^7.1.16",
+    "@types/react-redux": "7.1.16",
     "eslint": "7.28.0",
     "eslint-config-next": "11.0.0",
     "sass": "1.35.1",
